--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -1,5 +1,4 @@
 {{> clinician_sidebar}}
-
 <div class="panel-content">
     <div class="wt-grid-container">
 
@@ -236,4 +235,8 @@
             </form>
         </div>
     </div>
+    <div id="notification_clinician" class="wt-notification warning"> </div>
 </div>
+<script>
+    initSocket();
+</script>
