--- a/views/patient_records.hbs
+++ b/views/patient_records.hbs
@@ -2,8 +2,36 @@
 {{> header}}
 <div class="panel-content">
     <div class="wt-grid-container">
-        <div class="wt-grid-item size-12@p size-9@t">
-            <p>records</p>
+        <div class="wt-grid-item size-12@p size-12@t">
+            <h1>my rec</h1>
+        </div>
+        <div class="wt-grid-item size-12@p size-12@t">
+            <div class="wt-card wt-card-content">
+                <div class="wt-grid-container">
+                    <div class="wt-grid-item size-6@p size-4@t">
+                        <h1>date</h1>
+                    </div>
+                    <div class="wt-grid-item size-6@p size-2@t wt-visible@t wt-hidden@p">
+                        <h1>date</h1>
+                    </div>
+                    <div class="wt-grid-item size-6@p size-2@t wt-visible@t wt-hidden@p">
+                        <h1>date</h1>
+                    </div>
+                    <div class="wt-grid-item size-6@p size-2@t wt-visible@t wt-hidden@p">
+                        <h1>date</h1>
+                    </div>
+                    <div class="wt-grid-item size-6@p size-2@t  wt-visible@t wt-hidden@p">
+                        <h1>date</h1>
+                    </div>
+                    <div class="wt-grid-item size-6@p size-6@t wt-visible@p wt-hidden@t">
+                        <h1>weight : 23</h1>
+                        <h1>weight : 23</h1>
+                        <h1>weight : 23</h1>
+                        <h1>weight : 23</h1>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
